--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,12 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "options": {
+                "env": {
+                    "GOOS": "windows",
+                    "GOARCH": "amd64"
+                }
             }
         },
         {
